RESOLVED FIXED269275
[WebGPU] RemoteBuffer::getMappedRange may fail on invalid buffers
https://bugs.webkit.org/show_bug.cgi?id=269275
Summary [WebGPU] RemoteBuffer::getMappedRange may fail on invalid buffers
Mike Wyrzykowski
Reported 2024-02-12 23:10:43 PST
[WebGPU] RemoteBuffer::getMappedRange may fail on invalid buffers
Attachments
Mike Wyrzykowski
Comment 1 2024-02-12 23:11:02 PST
Mike Wyrzykowski
Comment 2 2024-02-12 23:17:00 PST
EWS
Comment 3 2024-02-13 16:29:35 PST
Committed 274591@main (436df12fad20): <https://commits.webkit.org/274591@main> Reviewed commits have been landed. Closing PR #24324 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.